Added footer with links

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="icon" href="<%= BASE_URL %>pokeball.ico">
+    <link rel="stylesheet" href="styles/main.css">
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
@@ -14,4 +15,12 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+  <footer>
+    <div>
+      Created by <a href="https://github.com/EagerBeaver98">EagerBeaver98</a>
+    </div>
+    <div>
+      <a href="https://github.com/"><img src="<%= BASE_URL %>img/github-logo.png" width="30px" height="auto" alt="Github"></a>
+    </div>
+  </footer>
 </html>
