--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>pokeball.ico">
     <link rel="stylesheet" href="styles/main.css">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>Pok&eacute;dex</title>
   </head>
   <body>
     <noscript>
