--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
       Created by <a href="https://github.com/EagerBeaver98">EagerBeaver98</a>
     </div>
     <div>
-      <a href="https://github.com/"><img src="<%= BASE_URL %>img/github-logo.png" width="30px" height="auto" alt="Github"></a>
+      <a href="https://github.com/"><img id="github" src="<%= BASE_URL %>img/github-logo.png" width="30px" height="auto" alt="Github"></a>
     </div>
   </footer>
 </html>
